Fixed the stylesheet

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <link rel=""stylesheet src="style.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div><h1>Odin Recipes</h1></div>
       <p><a href="./recipes/spaghetti.html">Spaghetti with Corned Beef</a></p>
       <p><a href="./recipes/lasagna.html">Enchilada Lasagna</a></p>
       <p><a href="./recipes/potatoes.html">Stuffed Potatoes</a></p>
