--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div><h1>Odin Recipes</h1></div>
+    <div><h1>My Favourite Recipes</h1></div>
       <p><a href="./recipes/spaghetti.html">Spaghetti with Corned Beef</a></p>
       <p><a href="./recipes/lasagna.html">Enchilada Lasagna</a></p>
       <p><a href="./recipes/potatoes.html">Stuffed Potatoes</a></p>
