--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div><h1>My Favourite Recipes</h1></div>
+    <button>
       <p><a href="./recipes/spaghetti.html">Spaghetti with Corned Beef</a></p>
       <p><a href="./recipes/lasagna.html">Enchilada Lasagna</a></p>
       <p><a href="./recipes/potatoes.html">Stuffed Potatoes</a></p>
+    </button>
 </body>
 </html>
