--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div><h1>My Favourite Recipes</h1></div>
-    <button><p><a href="./recipes/spaghetti.html">Spaghetti with Corned Beef</a></p></button>
-    <button><p><a href="./recipes/lasagna.html">Enchilada Lasagna</a></p></button>
-    <buton><p><a href="./recipes/potatoes.html">Stuffed Potatoes</a></p></buton>
-    
+    <div class="parent"><h1>Recipes You Need To Try</h1></div>
+    <div class="flex-container">
+        <div class="food spaghetti"><p class="child"><a href="./recipes/spaghetti.html">Spaghetti with Corned Beef</a></p></div>
+        <div class="food lasagna"><p class="child"><a href="./recipes/lasagna.html">Enchilada Lasagna</a></p></div>
+        <div class="food potatoes"><p class="child"><a href="./recipes/potatoes.html">Stuffed Potatoes</a></p></div>
+    </div>
+
+  
 </body>
 </html>
