--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="spaghetti.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>Spaghetti with Corned Beef</h1>
     <img src="./spaghetti.jpg" alt="A picture of a bowl of spaghetti and meatballs" />
     <h4>Description: 
-        <p>Quick and easy spaghetti using canned corned beef and bottled spaghetti sauce. Delicious! For added nutrition, add a can of mixed vegetables or cut-up fresh vegetable, such as chopped onion or green peppers and tomatoes.</p>
+        <p class="description">Quick and easy spaghetti using canned corned beef and bottled spaghetti sauce. Delicious! For added nutrition, add a can of mixed vegetables or cut-up fresh vegetable, such as chopped onion or green peppers and tomatoes.</p>
     </h4>
 
-    <h3>Ingredients:</h3> 
+    <h3 class="ingredients">Ingredients:</h3> 
         <ul>
             <li>8 ounces spaghetti</li>
             <li>1(12 ounce) can corned beef</li>
