--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,33 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="lasagna.css" rel="stylesheet" />
     <title>Enchilada Lasagna</title>
 </head>
 <body>
-    <h1>Enchilada Lasagna</h1>
-    <img src="lasagna.jpg" alt="A picture of a bow of lasagna" />
+    <div class="title"><h1>Enchilada Lasagna</h1></div>
+    <div class="arrangement">
+        <div><img src="lasagna.jpg" alt="A picture of a bow of lasagna" /></div>
+        <div class="fixing">
+            <h4 class="description">Description</h4>
+                <p>This enchilada lasagna is perfect for dinner or potlucks.</div></p>
+    </div>
 
-    <h4>This enchilada lasagna is perfect for dinner or potlucks.
-    </h4>
+    <div class="ingredient">
+        <h3 class="ingredients">Ingredients: </h3>
+        <div class="fix">
+        <ul>
+            <li>1 tablespoon vegetable oil</li>
+            <li>1 Onion, chopped</li>
+            <li>3 cloves garlic, chopped</li>
+            <li>1 pound ground turkey</li>
+            <li>1 (28 ounce) can enchilada sauce</li>
+            <li>1 (14.5 ounce) can diced tomatoes with lime juice and cilantro</li>
+            <li>1 (16 ounce) packaged small-curd cottage cheese</li>
+            <li>1 egg</li>
+            <li>1 tablespoon ground cumin</li>
+            <li>5 (6 inch) corn tortillas, halved</li>
+            <li>2 cups shredded Mexican cheese blend</li>
+            <li>cooking spray</li>
+            <li>1 green onion, diced</li>
+        </ul></div>
+    </div>
 
-    <h3>Ingredients: </h3>
-    <ul>
-        <li>1 tablespoon vegetable oil</li>
-        <li>1 Onion, chopped</li>
-        <li>3 cloves garlic, chopped</li>
-        <li>1 pound ground turkey</li>
-        <li>1 (28 ounce) can enchilada sauce</li>
-        <li>1 (14.5 ounce) can diced tomatoes with lime juice and cilantro</li>
-        <li>1 (16 ounce) packaged small-curd cottage cheese</li>
-        <li>1 egg</li>
-        <li>1 tablespoon ground cumin</li>
-        <li>5 (6 inch) corn tortillas, halved</li>
-        <li>2 cups shredded Mexican cheese blend</li>
-        <li>cooking spray</li>
-        <li>1 green onion, diced</li>
-    </ul>
-
-    <h3>Steps:
+   <div class="stepping">
+    <h3 class="steps">Steps:
         <ol>
             <li>Heat oil in a large pot over medium heat. Add onion and garlic; cook and stir until onion is translucent, about 5 minutes. Stir in ground turkey; cook until no longer pink, about 5 minutes. Drain excess grease.</li>
             <li>Stir enchilada sauce and diced tomatoes into the pot. Simmer until flavors combine, about 20 minutes. Remove from heat.</li>
@@ -40,8 +47,11 @@
             <li>Bake in the preheated oven until bubbly, about 30 minutes. Remove aluminum foil and continue baking until top is browned, about 15 minutes. Cool for 15 minutes before serving. Garnish with green onion.</li>
         </ol>
     </h3>
+   </div>
 
-    <h2>Nutrition Facts</h2>
-    <p>Per Serving: 428 calories; protein 31g; carbohydrates 22.1g; fat 24.1g; cholesterol 120mg; sodium 929.9mg</p>
+    <div class="fixing">
+        <h2 class="description">Nutrition Facts</h2>
+        <p class="description">Per Serving: 428 calories; protein 31g; carbohydrates 22.1g; fat 24.1g; cholesterol 120mg; sodium 929.9mg</p>
+    </div>
 </body>
 </html>
