--- a/recipes/potatoes.html
+++ b/recipes/potatoes.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="potatoes.css" />
     <title>Document</title>
 </head>
 <body>
-    <h1>Stuffed Potatoes</h1>
-    <img src="potatoes.jpg" alt="plate of stuffed potatoes" />
 
-    <h4>Description</h4>
-    <p> The potatoes are baked and then scooped out. Mix potatoes with shredded cheddar and the 'secret' zing- sour cream and onion dip. Goes great with a grilled steak!</p>
+    <div class="title"><h1>Stuffed Potatoes</h1></div>
+   <div class="arrangement">
+        <div><img src="potatoes.jpg" alt="plate of stuffed potatoes" /></div>
+        <div class="fixing"><h4>Description</h4>
+        <p class="description"> The potatoes are baked and then scooped out. Mix potatoes with shredded cheddar and the 'secret' zing- sour cream and onion dip. Goes great with a grilled steak!</p></div>
+    </div>
 
-    <h3>Ingredients:</h3>
-    <ul>
-        <li>4 large baking potatoes</li>
-        <li>2 cups shredded Cheddar cheese</li>
-        <li>1 (16 ounce) container sour cream and onion dip</li>
-    </ul>
+    <div class="ingredient"><h3 class="ingredients">Ingredients:</h3>
+        <div class="fix">
+         <ul>
+            <li>4 large baking potatoes</li>
+            <li>2 cups shredded Cheddar cheese</li>
+            <li>1 (16 ounce) container sour cream and onion dip</li>
+         </ul>
+        </div>
+    
 
-    <h3>Steps:</h3>
+    <div class="stepping">
+        <h3 class="steps">Steps:</h3>
     <ol>
         <li>Preheat oven to 350 degrees F (175 degrees C).</li>
         <li>Bake potatoes in preheated oven for 45 minutes, or until cooked through.</li>
@@ -27,5 +34,6 @@
         <li>To the potato flesh add the cheese and dip. Mix well and spoon mixture into potato skins.</li>
         <li>Bake for another 30 minutes, or until heated through.</li>
     </ol>
+    </div>
 </body>
 </html>
