--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,14 +7,19 @@
     <link href="spaghetti.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Spaghetti with Corned Beef</h1>
-    <img src="./spaghetti.jpg" alt="A picture of a bowl of spaghetti and meatballs" />
-    <h4>Description: 
-        <p class="description">Quick and easy spaghetti using canned corned beef and bottled spaghetti sauce. Delicious! For added nutrition, add a can of mixed vegetables or cut-up fresh vegetable, such as chopped onion or green peppers and tomatoes.</p>
-    </h4>
+   <div class="title"><h1>Spaghetti with Corned Beef</h1></div> 
+    <div class="arrangement">
+       <div><img src="./spaghetti.jpg" alt="A picture of a bowl of spaghetti and meatballs" /></div>       
 
-    <h3 class="ingredients">Ingredients:</h3> 
-        <ul>
+       <div class="fixing">
+           <h3>Description: </h3>
+           <p class="description">Quick and easy spaghetti using canned corned beef and bottled spaghetti sauce. Delicious! For added nutrition, add a can of mixed vegetables or cut-up fresh vegetable, such as chopped onion or green peppers and tomatoes.</p>
+       </div>
+    </div>
+
+    <div class="ingredient">
+        <h3 class="ingredients">Ingredients:</h3> 
+        <div class="fix"><ul>
             <li>8 ounces spaghetti</li>
             <li>1(12 ounce) can corned beef</li>
             <li>1 cup spaghetti sauce</li>
@@ -22,14 +27,16 @@
             <li>1 teaspoon italian seasoning</li>
             <li>1/2 teaspoon garlic powder (Optional)</li>
             <li>1/2 teaspoon dried minces onions (Optional)</li>
-        </ul>
+        </ul></div>
+    </div>
     
-    <h3>Steps: </h3>
+    <div><h3 class="ingredients">Steps: </h3>
         <ol>
             <li>Dissolve bouillon in boiling water. Cut spaghetti noodles in half and add to boiling water until done.</li>
             <li>Over medium heat empty can of corned beef onto a skillet. Add spaghetti sauce to meat. Stir until heated; corned beef will come apart and a thick sauce will form. If desired, add Italian seasoning, garlic powder, dry onion, or any other spices.</li>
             <li>Once noodles are done, drain and combine with corned beef sauce.</li>
-        </ol>     
+        </ol>
+    </div>  
 
 
 </body>
